versions/18.7.1/kk/bridge.md
- Қандағы оттегі: `bridge:root=com.apple.OxygenSaturationSettings`
- Қол жуу: `bridge:root=com.apple.BrookBridgeSettings`
- Қол жуу → Хабарландыруды қосу: `bridge:root=com.apple.BrookBridgeSettings#ALLOW_NOTIFICATIONS_ID`
- Қол жуу → Хабарландыру орталығына жіберу: `bridge:root=com.apple.BrookBridgeSettings#SEND_TO_NOTIFICATION_CENTER_ID`
- Қол жуу → Хабарландыруды өшіру: `bridge:root=com.apple.BrookBridgeSettings#NOTIFICATIONS_OFF_ID`
- Қол жуу → Хабарландыруды топтастыру: `bridge:root=com.apple.BrookBridgeSettings&path=NOTIFICATION_COALESCING_ID`
- Қол жуу → Қол жуу таймері: `bridge:root=com.apple.BrookBridgeSettings#HANDWASHING_TIMER_ID`
- Дисплей және жарықтық: `bridge:root=DISPLAY_AND_BRIGHTNESS`
- Дисплей және жарықтық → Ояну ұзақтығы: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=Wake%20Duration`
- Дисплей және жарықтық → Ояну ұзақтығы → ТҮРТКЕННЕН КЕЙІН: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=Wake%20Duration#ON_TAP_GROUP_ID`
- Дисплей және жарықтық → Ояну ұзақтығы → 15 секунд белсенді: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=Wake%20Duration#SHORT_WAKE_ID`
- Дисплей және жарықтық → Ояну ұзақтығы → 70 секунд белсенді: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=Wake%20Duration#LONG_WAKE_ID`
- Дисплей және жарықтық → Жарықтық: `bridge:root=DISPLAY_AND_BRIGHTNESS#BRIGHTNESS_LABEL`
- Дисплей және жарықтық → Әрдайым қосулы: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID`
- Дисплей және жарықтық → Әрдайым қосулы → Әрдайым қосулы: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID#TRITIUM_ID`
- Дисплей және жарықтық → Әрдайым қосулы → БІЛЕК ТӨМЕН ТҮСІРІЛГЕНДЕ: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID#TRITIUM_PRIVACY_GROUP_ID`
- Дисплей және жарықтық → Әрдайым қосулы → Хабарландыруларды көрсету: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID/Show%20Notifications`
- Дисплей және жарықтық → Әрдайым қосулы → Хабарландыруларды көрсету → Хабарландыруларды көрсету: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID/Show%20Notifications#APP_BACKLIGHT_PRIVACY_GLOBAL_APP`
- Дисплей және жарықтық → Әрдайым қосулы → Хабарландыруларды көрсету → APPLE WATCH САҒАТЫНА АРНАЛҒАН ҚОЛДАНБАЛАР: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID/Show%20Notifications#APP_GROUP_ID`
- Дисплей және жарықтық → Әрдайым қосулы → Қолданбаларды көрсету: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID/Show%20Apps`
- Дисплей және жарықтық → Әрдайым қосулы → Қолданбаларды көрсету → Қолданбаларды көрсету: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID/Show%20Apps#APP_BACKLIGHT_PRIVACY_GLOBAL_APP`
- Дисплей және жарықтық → Әрдайым қосулы → Қолданбаларды көрсету → ҚОЛДАНБАЛАР: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID/Show%20Apps#APP_GROUP_ID`
- Дисплей және жарықтық → Мәтін өлшемі: `bridge:root=DISPLAY_AND_BRIGHTNESS#TEXT_SIZE`
- Дисплей және жарықтық → Қалың қаріпті мәтін: `bridge:root=DISPLAY_AND_BRIGHTNESS#BOLD_TEXT`
- Дисплей және жарықтық → ҰЙҚЫ РЕЖИМІНЕН ШЫҒУ: `bridge:root=DISPLAY_AND_BRIGHTNESS#WAKE`
- Дисплей және жарықтық → Білекті көтерген кезде ояну: `bridge:root=DISPLAY_AND_BRIGHTNESS#WAKE_SCREEN_ON_WRIST_RAISE_SWITCH_ID`
- Дисплей және жарықтық → Дөңгелекшені айналдырған кезде ояну: `bridge:root=DISPLAY_AND_BRIGHTNESS#WAKE_SCREEN_ON_CROWN_UP_SWITCH_ID`
- Фотолар: `bridge:root=com.apple.NanoPhotosBridgeSettings`
- Фотолар → Фотоларды синхрондау: `bridge:root=com.apple.NanoPhotosBridgeSettings#Photo%20Syncing`
- Фотолар → Естеліктер: `bridge:root=com.apple.NanoPhotosBridgeSettings#Memories`
- Фотолар → Естеліктерді синхрондау: `bridge:root=com.apple.NanoPhotosBridgeSettings#Sync%20Memories`
- Фотолар → Фотолар топтамасы: `bridge:root=com.apple.NanoPhotosBridgeSettings#Featured%20Photos`
- Фотолар → Фотолар топтамасын синхрондау: `bridge:root=com.apple.NanoPhotosBridgeSettings#Sync%20Featured%20Photos`
- Фотолар → Альбом: `bridge:root=com.apple.NanoPhotosBridgeSettings#Album`
- Фотолар → Альбомды синхрондау: `bridge:root=com.apple.NanoPhotosBridgeSettings&path=Sync%20Album`
- Фотолар → Макс. фотолар саны: `bridge:root=com.apple.NanoPhotosBridgeSettings&path=Photos%20Limit`
- Фотолар → Хабарландыру реттеулері: `bridge:root=com.apple.NanoPhotosBridgeSettings#MIRROR_RADIO_GROUP_ID`
- Фотолар → iPhone құрылғысын қайталау: `bridge:root=com.apple.NanoPhotosBridgeSettings#MIRROR_MY_COMPANION_ID`
- Фотолар → Арнаулы: `bridge:root=com.apple.NanoPhotosBridgeSettings#CUSTOM_ID`
- Кеңейтімдер: `bridge:root=COMPLICATIONS`
- Қолданба көрінісі: `bridge:root=APP_VIEW_ID`
- Жалпы: `bridge:root=GENERAL_LINK`
- Жалпы → Ақпарат: `bridge:root=GENERAL_LINK&path=ABOUT`
- Жалпы → Ақпарат → Аты: `bridge:root=GENERAL_LINK&path=ABOUT/NAME_CELL_ID`
- Жалпы → Ақпарат → Шектеулі кепілдік: `bridge:root=GENERAL_LINK&path=ABOUT/WARRANTY_DESCRIPTION`
- Жалпы → Ақпарат → Шектеулі кепілдік → Шектеулі кепілдік: `bridge:root=GENERAL_LINK&path=ABOUT/WARRANTY_DESCRIPTION#Limited%20Warranty`
- Жалпы → Ақпарат → Шектеулі кепілдік → КЕПІЛДІКТІҢ ҚОЛДАНЫЛУЫ ТУРАЛЫ МӘЛІМЕТТЕР: `bridge:root=GENERAL_LINK&path=ABOUT/WARRANTY_DESCRIPTION#COVERAGE%20DETAILS`
- Жалпы → Ақпарат → Шектеулі кепілдік → Аппараттық жасақтамаға кепілдіктің қолданылуы: `bridge:root=GENERAL_LINK&path=ABOUT/WARRANTY_DESCRIPTION#Hardware%20Coverage`
- Жалпы → Ақпарат → Шектеулі кепілдік → Чат және телефонға қолдау көрсету: `bridge:root=GENERAL_LINK&path=ABOUT/WARRANTY_DESCRIPTION#Chat%20&%20Phone%20Support`
- Жалпы → Ақпарат → Әндер: `bridge:root=GENERAL_LINK&path=ABOUT#SONGS_CELL_ID`
- Жалпы → Ақпарат → Фотолар: `bridge:root=GENERAL_LINK&path=ABOUT#PHOTOS_CELL_ID`
- Жалпы → Ақпарат → Қолданбалар: `bridge:root=GENERAL_LINK&path=ABOUT#APPLICATIONS_CELL_ID`
- Жалпы → Ақпарат → Сыйымдылық: `bridge:root=GENERAL_LINK&path=ABOUT#STORAGE_CAPACITY_CELL_ID`
- Жалпы → Ақпарат → Қолжетімді: `bridge:root=GENERAL_LINK&path=ABOUT#STORAGE_AVAILABLE_CELL_ID`
- Жалпы → Ақпарат → Нұсқа: `bridge:root=GENERAL_LINK&path=ABOUT#OS_VERSION_CELL_ID`
- Жалпы → Ақпарат → Ұялы байланыс операторы: `bridge:root=GENERAL_LINK&path=ABOUT#CARRIER_CELL_ID`
- Жалпы → Ақпарат → Модель: `bridge:root=GENERAL_LINK&path=ABOUT#DEVICE_MODEL_CELL_ID`
- Жалпы → Ақпарат → Сериялық нөмірі: `bridge:root=GENERAL_LINK&path=ABOUT#DEVICE_SERIAL_NUMBER_CELL_ID`
- Жалпы → Ақпарат → Bluetooth: `bridge:root=GENERAL_LINK&path=ABOUT#DEVICE_BLUETOOTH_ADDRESS_CELL_ID`
- Жалпы → Ақпарат → IMEI: `bridge:root=GENERAL_LINK&path=ABOUT#IMEI_CELL_ID`
- Жалпы → Ақпарат → ICCID: `bridge:root=GENERAL_LINK&path=ABOUT#ICCID_CELL_ID`
- Жалпы → Ақпарат → EID: `bridge:root=GENERAL_LINK&path=ABOUT/EID_CELL_ID`
- Жалпы → Ақпарат → SEID: `bridge:root=GENERAL_LINK&path=ABOUT/DEVICE_SEID_CELL_ID`
- Жалпы → Ақпарат → Құқықтық құжаттар: `bridge:root=GENERAL_LINK&path=ABOUT/LEGAL`
- Жалпы → Ақпарат → Apple Watch пайдаланушы нұсқаулығын қараңыз : `bridge:root=GENERAL_LINK&path=ABOUT#MANUAL`
- Жалпы → БЖ жаңартуы: `bridge:root=GENERAL_LINK&path=SOFTWARE_UPDATE_LINK`
- Жалпы → Қолданбаны автоматты түрде орнату: `bridge:root=GENERAL_LINK#AUTO_APP_INSTALL_SWITCH_ID`
- Жалпы → Ұшақ режимі: `bridge:root=GENERAL_LINK&path=AIRPLANE_MODE_ID`
- Жалпы → Зейін қою: `bridge:root=GENERAL_LINK&path=FOCUS_ID`
- Жалпы → Зейін қою → iPhone құрылғысын қайталау: `bridge:root=GENERAL_LINK&path=FOCUS_ID#Mirror%20my%20iPhone`
- Жалпы → Сағат бағдары: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION`
- Жалпы → Сағат бағдары → Apple Watch сағатын тағу: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION#WRIST_CHOICE_ID`
- Жалпы → Сағат бағдары → Сол жақ білек: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION#LEFT_HAND_ID`
- Жалпы → Сағат бағдары → Оң жақ білек: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION#RIGHT_HAND_ID`
- Жалпы → Сағат бағдары → Сол жақтағы Digital Crown: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION#LISA_ON_LEFT_ID`
- Жалпы → Сағат бағдары → Оң жақтағы Digital Crown: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION#LISA_ON_RIGHT_ID`
- Жалпы → Apple аккаунты: `bridge:root=GENERAL_LINK&path=LINK_WITH_ICLOUD_LINK`
- Жалпы → Мәтінді дауыспен енгізу функциясын қосу: `bridge:root=GENERAL_LINK#DICTATION_CELL_ID`
- Жалпы → Handoff функциясын қосу: `bridge:root=GENERAL_LINK#CONTINUITY`
- Жалпы → Түнгі режим: `bridge:root=GENERAL_LINK#NIGHTSTAND_CELL_ID`
- Жалпы → Скриншоттарды қосу: `bridge:root=GENERAL_LINK#BUTTON_CHORD_CELL_ID`
- Жалпы → Күту режимі | Сақтау орны | Соңғы рет толық зарядтаудан кейін өткен уақыт | Үнемдеу режимі: `bridge:root=GENERAL_LINK&path=USAGE_LINK`
- Жалпы → Диагностикалық журналдар: `bridge:root=GENERAL_LINK&path=DIAGNOSTIC_LOG_BROWSER`
- Жалпы → Сағат аналитикасын көшіру: `bridge:root=GENERAL_LINK#LOGS_CELL_ID`
- Жалпы → Бастапқы күйге қайтару: `bridge:root=GENERAL_LINK&path=RESET`
- Жалпы → Су астында автоматты түрде іске қосу: `bridge:root=GENERAL_LINK&path=AUTO_LAUNCH`
- Жалпы → Су астында автоматты түрде іске қосу → Аудиосы бар қолданбаларды автоматты түрде іске қосу: `bridge:root=GENERAL_LINK&path=AUTO_LAUNCH#AUTO_LAUNCH_MEDIA`
- Жалпы → ЦИФЕРБЛАТҚА ОРАЛУ: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK`
- Жалпы → ЦИФЕРБЛАТҚА ОРАЛУ → ЦИФЕРБЛАТҚА ОРАЛУ: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK#CSLPRFReturnToClockGroupID`
- Жалпы → ЦИФЕРБЛАТҚА ОРАЛУ → Әрдайым: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK#RETURN_TO_CLOCK_ALWAYS`
- Жалпы → ЦИФЕРБЛАТҚА ОРАЛУ → 2 минуттан кейін: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK#RETURN_TO_CLOCK_AFTER_2_MINUTES`
- Жалпы → ЦИФЕРБЛАТҚА ОРАЛУ → 1 сағаттан кейін: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK#RETURN_TO_CLOCK_AFTER_1_HOUR`
- Жалпы → ЦИФЕРБЛАТҚА ОРАЛУ → ҚОЛДАНБАЛАР: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK#APP_GROUP_ID`
- Жалпы → Тіл және аймақ: `bridge:root=GENERAL_LINK&path=LANGUAGE_AND_REGION`
- Жалпы → Тіл және аймақ → iPhone құрылғысын қайталау: `bridge:root=GENERAL_LINK&path=LANGUAGE_AND_REGION#MIRROR_MY_COMPANION_ID`
- Жалпы → Тіл және аймақ → Арнаулы: `bridge:root=GENERAL_LINK&path=LANGUAGE_AND_REGION#CUSTOM_ID`
- Жалпы → Wake Screen: `bridge:root=GENERAL_LINK&path=WAKE_SCREEN`
- Жалпы → Wake Screen → Қазір ойнатылуда: `bridge:root=GENERAL_LINK&path=WAKE_SCREEN#AUTO_LAUNCH_MEDIA`
- Смарт десте: `bridge:root=SMARTSTACK_LINK`
- Дыбыстар мен жанасу сигналдары: `bridge:root=SOUNDS_ID`
- Дыбыстар мен жанасу сигналдары → Дабылдың дыбыс деңгейі: `bridge:root=SOUNDS_ID#AUDIO_SLIDER`
- Дыбыстар мен жанасу сигналдары → Дыбыссыз режим: `bridge:root=SOUNDS_ID#audio_mute_switch`
- Дыбыстар мен жанасу сигналдары → Құлаққаптың дыбысы: `bridge:root=SOUNDS_ID#HEADPHONE_AUDIO_GROUP`
- Дыбыстар мен жанасу сигналдары → Құлаққап қауіпсіздігі: `bridge:root=SOUNDS_ID&path=HEADPHONE_LEVEL_LIMIT_SETTING`
- Дыбыстар мен жанасу сигналдары → Құлаққап қауіпсіздігі → Құлаққап хабарландырулары: `bridge:root=SOUNDS_ID&path=HEADPHONE_LEVEL_LIMIT_SETTING#COSHeadphoneNotificationsSwitchKey`
- Дыбыстар мен жанасу сигналдары → Құлаққап қауіпсіздігі → Қатты дыбыстарды азайту: `bridge:root=SOUNDS_ID&path=HEADPHONE_LEVEL_LIMIT_SETTING#COSHeadphoneLevelLimitSwitchKey`
- Дыбыстар мен жанасу сигналдары → Жанасу сигналдары: `bridge:root=SOUNDS_ID#Haptics`
- Дыбыстар мен жанасу сигналдары → Тактильді ескертулер: `bridge:root=SOUNDS_ID#Haptic%20Alerts`
- Дыбыстар мен жанасу сигналдары → Тактильді дөңгелекше: `bridge:root=SOUNDS_ID#JACKRABBIT_ID`
- Дыбыстар мен жанасу сигналдары → Жүйелік жанасу сигналдары: `bridge:root=SOUNDS_ID#SYSTEM_HAPTICS_ID`
- Дыбыстар мен жанасу сигналдары → Дыбысын өшіру үшін жабу: `bridge:root=SOUNDS_ID#COVER_TO_MUTE`
- Төтенше қоңырау — SOS: `bridge:root=SOS_MODE_ID`
- Құпиялылық: `bridge:root=PRIVACY_ID`
- Құпиялылық → Жүрек соғу жиілігі: `bridge:root=PRIVACY_ID#HEART_RATE_ENABLED_LABEL`
- Құпиялылық → Тыныс алу жиілігі: `bridge:root=PRIVACY_ID#RESPIRATORY_RATE_LABEL`
- Құпиялылық → Фитнесті қадағалау: `bridge:root=PRIVACY_ID#FITNESS_TRACKING_ENABLED_LABEL`
- Құпиялылық → Калибрлеу дерегін нөлдеу: `bridge:root=PRIVACY_ID#RESET_MOTION_CALIBRATION_LABEL`
- Құпиялылық → Айналадағы дыбысты өлшеу: `bridge:root=PRIVACY_ID#ENVIRONMENTAL_AUDIO_ENABLED_SWITCH_ID`
- Құпиялылық → Құлаққаптың дыбыс өлшемдері: `bridge:root=PRIVACY_ID&path=HeadphoneAudio`
- Құпиялылық → Құлаққаптың дыбыс өлшемдері → «Денсаулық» қолданбасында сақтау: `bridge:root=PRIVACY_ID&path=HeadphoneAudio#SAVE_IN_HEALTH_GROUP`
- Құпиялылық → Құлаққаптың дыбыс өлшемдері → 8 күнге: `bridge:root=PRIVACY_ID&path=HeadphoneAudio#FOR_EIGHT_DAYS_CELL`
- Құпиялылық → Құлаққаптың дыбыс өлшемдері → Жойғанға дейін: `bridge:root=PRIVACY_ID&path=HeadphoneAudio#UNTIL_I_DELETE_CELL`
- Құпиялылық → Қандағы оттегі деңгейін өлшеулер: `bridge:root=PRIVACY_ID#OXYGEN_SATURATION_ENABLED_SWITCH_ID`
- Құпиялылық → Білек температурасы: `bridge:root=PRIVACY_ID#WRIST_TEMPERATURE_SWITCH_ID`
- Экран уақыты: `bridge:root=SCREEN_TIME_ID`
- Nike Run Club: `bridge:root=VICTORY_ROW_ID`
- Сағат: `bridge:root=com.apple.NanoClockBridgeSettings`
- Сағат → 24 сағаттық уақыт: `bridge:root=com.apple.NanoClockBridgeSettings#24-Hour%20Time`
- Сағат → Қоңырау үні: `bridge:root=com.apple.NanoClockBridgeSettings#Chimes`
- Сағат → Дыбыстар: `bridge:root=com.apple.NanoClockBridgeSettings&path=Sounds`
- Сағат → Дыбыстар → Қоңыраулар: `bridge:root=com.apple.NanoClockBridgeSettings&path=Sounds#Bells`
- Сағат → Дыбыстар → Құстар: `bridge:root=com.apple.NanoClockBridgeSettings&path=Sounds#Birds`
- Сағат → Уақытты дауыстап айту: `bridge:root=com.apple.NanoClockBridgeSettings#Speak%20Time`
- Сағат → Дыбыссыз режимде басқару: `bridge:root=com.apple.NanoClockBridgeSettings#Control%20With%20Silent%20Mode`
- Сағат → Әрдайым дыбыстау: `bridge:root=com.apple.NanoClockBridgeSettings#Always%20Speak`
- Сағат → Тактильді уақыт: `bridge:root=com.apple.NanoClockBridgeSettings&path=Taptic%20Time`
- Сағат → Тактильді уақыт → Тактильді уақыт: `bridge:root=com.apple.NanoClockBridgeSettings&path=Taptic%20Time#Taptic%20Time`
- Сағат → Тактильді уақыт → Сандар: `bridge:root=com.apple.NanoClockBridgeSettings&path=Taptic%20Time#Digits`
- Сағат → Тактильді уақыт → Қысқа: `bridge:root=com.apple.NanoClockBridgeSettings&path=Taptic%20Time#Terse`
- Сағат → Тактильді уақыт → Морзе әліпбиі: `bridge:root=com.apple.NanoClockBridgeSettings&path=Taptic%20Time#Morse%20Code`
- Сағат → iPhone құрылғысының Push ескертулері: `bridge:root=com.apple.NanoClockBridgeSettings#Push%20Alerts%20from%20iPhone`
- Сағат → Хабарландыру индикаторы: `bridge:root=com.apple.NanoClockBridgeSettings#Notifications%20Indicator`
- Сағат → Монограмма: `bridge:root=com.apple.NanoClockBridgeSettings&path=MONOGRAM_ID`
- Сағат → Сағат циферблатының хабарландырулары: `bridge:root=com.apple.NanoClockBridgeSettings#Watch%20Face%20Notifications`
- Сағат → Қалалардың қысқарған атауы: `bridge:root=com.apple.NanoClockBridgeSettings&path=City%20Abbreviations`
- Сағат → Siri циферблатының дереккөздері: `bridge:root=com.apple.NanoClockBridgeSettings&path=Siri%20Face%20Data%20Sources`
- Шу: `bridge:root=com.apple.Noise.settings`
- Шу → Айналадағы дыбысты өлшеу: `bridge:root=com.apple.Noise.settings#ENABLE_MEASUREMENTS_ID`
- Шу → Шу туралы хабарландырулар: `bridge:root=com.apple.Noise.settings#LOUD_NOTIFICATION_GROUP_ID`
- Шу → Шу деңгейінің шегі: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID`
- Шу → Шу деңгейінің шегі → Өшірулі: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#OFF`
- Шу → Шу деңгейінің шегі → 80 децибел: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#ID_BPM_80`
- Шу → Шу деңгейінің шегі → 85 децибел: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#ID_BPM_85`
- Шу → Шу деңгейінің шегі → 90 децибел: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#ID_BPM_90`
- Шу → Шу деңгейінің шегі → 95 децибел: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#ID_BPM_95`
- Шу → Шу деңгейінің шегі → 100 децибел: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#ID_BPM_100`
- Шу → Хабарландыруды топтастыру: `bridge:root=com.apple.Noise.settings&path=NOTIFICATION_COALESCING_ID`
- Күнтізбе: `bridge:root=com.apple.NanoCalendarBridgeSettings`
- Күнтізбе → ХАБАРЛАНДЫРУЛАР: `bridge:root=com.apple.NanoCalendarBridgeSettings#MIRROR_RADIO_GROUP_ID`
- Күнтізбе → iPhone құрылғысын қайталау: `bridge:root=com.apple.NanoCalendarBridgeSettings#MIRROR_MY_COMPANION_ID`
- Күнтізбе → Арнаулы…: `bridge:root=com.apple.NanoCalendarBridgeSettings#CUSTOM_ID`
- Күнтізбе → КҮНТІЗБЕЛЕР: `bridge:root=com.apple.NanoCalendarBridgeSettings#CALENDARS_MIRROR_RADIO_GROUP_ID`
- Күнтізбе → iPhone құрылғысын қайталау: `bridge:root=com.apple.NanoCalendarBridgeSettings#CALENDARS_MIRROR_MY_COMPANION_ID`
- Күнтізбе → Арнаулы…: `bridge:root=com.apple.NanoCalendarBridgeSettings&path=CALENDARS_CUSTOM_ID`
- Күнтізбе → Алдағы оқиғалар: `bridge:root=com.apple.NanoCalendarBridgeSettings&path=Upcoming%20Events`
- Күнтізбе → Шақырулар: `bridge:root=com.apple.NanoCalendarBridgeSettings&path=Invitations`
- Күнтізбе → Қатысушылардың жауаптары: `bridge:root=com.apple.NanoCalendarBridgeSettings&path=Invitee%20Responses`
- Күнтізбе → Ортақ күнтізбедегі өзгерістер: `bridge:root=com.apple.NanoCalendarBridgeSettings&path=Shared%20Calendar%20Alerts`
- Рация: `bridge:root=com.apple.tincan.settings`
- Рация → Хабарландыруды қосу: `bridge:root=com.apple.tincan.settings#ALLOW_NOTIFICATIONS_ID`
- Рация → Хабарландыру орталығына жіберу: `bridge:root=com.apple.tincan.settings#SEND_TO_NOTIFICATION_CENTER_ID`
- Рация → Хабарландыруды өшіру: `bridge:root=com.apple.tincan.settings#NOTIFICATIONS_OFF_ID`
- Рация → Хабарландыруды топтастыру: `bridge:root=com.apple.tincan.settings&path=NOTIFICATION_COALESCING_ID`
- Рация → Достар: `bridge:root=com.apple.tincan.settings#Friends`
- Siri: `bridge:root=SIRI_WATCH_SETTINGS_ID`
- Siri → Siri көмекшісінен сұрау: `bridge:root=SIRI_WATCH_SETTINGS_ID#ASK_SIRI_GROUP_ID`
- Siri → Siri: `bridge:root=SIRI_WATCH_SETTINGS_ID#HEY_SIRI_SWITCH_ID`
- Siri → Жақындатып, сөйлеу: `bridge:root=SIRI_WATCH_SETTINGS_ID#RAISE_TO_SPEAK_SWITCH_ID`
- Siri → Digital Crown дөңшелекшесін басу: `bridge:root=SIRI_WATCH_SETTINGS_ID#DIGITAL_CROWN_SWITCH_ID`
- Siri → Дыбыстық пікір: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=VOICE_FEEDBACK_ID`
- Siri → Дыбыстық пікір → Әрдайым қосулы: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=VOICE_FEEDBACK_ID#VOICE_FEEDBACK_ALWAYS_ON_ID`
- Siri → Дыбыстық пікір → Дыбыссыз режимде басқару: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=VOICE_FEEDBACK_ID#VOICE_FEEDBACK_CONTROL_WITH_SILENT_MODE_ID`
- Siri → Дыбыстық пікір → Тек құлаққап: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=VOICE_FEEDBACK_ID#VOICE_FEEDBACK_HEADPHONES_ONLY_ID`
- Siri → Дауыс деңгейі: `bridge:root=SIRI_WATCH_SETTINGS_ID#VOICE_VOLUME_GROUP_ID`
- Siri → Siri ұсыныстары: `bridge:root=SIRI_WATCH_SETTINGS_ID#ASSISTANT_SUGGESTIONS_GROUP_ID`
- Жаттығу: `bridge:root=com.apple.SessionTrackerAppSettings`
- Жаттығу → Көрсеткіштерді көрсету: `bridge:root=com.apple.SessionTrackerAppSettings#PRO_SETTING_ENABLED_LABEL`
- Жаттығу → Жаттығу көрінісі: `bridge:root=com.apple.SessionTrackerAppSettings&path=METRIC_VIEW_ID`
- Жаттығу → Авто кідірту: `bridge:root=com.apple.SessionTrackerAppSettings&path=AUTO_PAUSE_ID`
- Жаттығу → Авто кідірту → Авто кідірту: `bridge:root=com.apple.SessionTrackerAppSettings&path=AUTO_PAUSE_ID#WorkoutAutoPauseSwitch`
- Жаттығу → Жаттығуды бастауға қатысты еске салғыш: `bridge:root=com.apple.SessionTrackerAppSettings#AUTO_START_WORKOUT_NOTIFICATIONS_ENABLED_LABEL`
- Жаттығу → Жаттығуды аяқтауға қатысты еске салғыш: `bridge:root=com.apple.SessionTrackerAppSettings#END_REMINDERS_ENABLED_LABEL`
- Жаттығу → Кідірту үшін басыңыз: `bridge:root=com.apple.SessionTrackerAppSettings#CHORD_PRESS_PAUSE_WORKOUT_ENABLED_LABEL`
- Жаттығу → Спорт жабдығын анықтау: `bridge:root=com.apple.SessionTrackerAppSettings#NFC_ENABLED_LABEL_ID`
- Жаттығу → Қарқын/жылдамдық көрінісі: `bridge:root=com.apple.SessionTrackerAppSettings&path=PACE_VIEW_LABEL`
- Жаттығу → Қарқын/жылдамдық көрінісі → Ағымдағы: `bridge:root=com.apple.SessionTrackerAppSettings&path=PACE_VIEW_LABEL#CURRENT_PACE_ID`
- Жаттығу → Қарқын/жылдамдық көрінісі → Орташа: `bridge:root=com.apple.SessionTrackerAppSettings&path=PACE_VIEW_LABEL#AVERAGE_PACE_ID`
- Жаттығу → Жаттығулар плейлисті: `bridge:root=com.apple.SessionTrackerAppSettings&path=MUSIC_AUTOSTART_TITLE_ID`
- Жаттығу → Жаттығулар плейлисті → Жоқ: `bridge:root=com.apple.SessionTrackerAppSettings&path=MUSIC_AUTOSTART_TITLE_ID#NONE_AUTOSTART_ID`
- Жаттығу → Жаттығулар плейлисті → Плейлисттер: `bridge:root=com.apple.SessionTrackerAppSettings&path=MUSIC_AUTOSTART_TITLE_ID#MUSIC_PLAYLIST_GROUP_ID`
- Жаттығу → Басынан бастап ойнату: `bridge:root=com.apple.SessionTrackerAppSettings#WORKOUT_MUSIC_PLAY_FROM_BEGINNING_SETTING_ID`
- Жаттығу → Араластыру: `bridge:root=com.apple.SessionTrackerAppSettings#WORKOUT_MUSIC_SHUFFLE_SETTING_ID`
- Жаттығу → Өлшем бірліктері: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID`
- Жаттығу → Өлшем бірліктері → Калориялар: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#ENERGY_UNITS_CALORIES_ID`
- Жаттығу → Өлшем бірліктері → Килокалория: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#ENERGY_UNITS_KILOCALORIES_ID`
- Жаттығу → Өлшем бірліктері → Килоджоуль: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#ENERGY_UNITS_KILOJOULES_ID`
- Жаттығу → Өлшем бірліктері → Ярд: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#POOL_LENGTH_YARDS_ID`
- Жаттығу → Өлшем бірліктері → Метр: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#POOL_LENGTH_METERS_ID`
- Жаттығу → Өлшем бірліктері → Миль: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#CYCLING_WORKOUTS_MILES_ID`
- Жаттығу → Өлшем бірліктері → Километр: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#CYCLING_WORKOUTS_KILOMETERS_ID`
- Жаттығу → Өлшем бірліктері → Миль: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#WALKING_AND_RUNNING_WORKOUTS_MILES_ID`
- Жаттығу → Өлшем бірліктері → Километр: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#WALKING_AND_RUNNING_WORKOUTS_KILOMETERS_ID`
- Жаттығу → Дыбыстық пікір: `bridge:root=com.apple.SessionTrackerAppSettings#WORKOUT_VOICE_FEEDBACK_LABEL`
- Жаттығу → Жүру уақыты: `bridge:root=com.apple.SessionTrackerAppSettings#GUIDED_WORKOUT_PREFETCH_FOOTER_ID`
- Жаттығу → Сағатқа жаңа жаттығулар қосу: `bridge:root=com.apple.SessionTrackerAppSettings#GUIDED_WORKOUT_PREFETCH_LABEL_ID`
- Жаттығу → Заряд үнемдеу режимі: `bridge:root=com.apple.SessionTrackerAppSettings#LOW_POWER_MODE`
- Хабарлар: `bridge:root=com.apple.MessagesBridgeSettings`
- Хабарлар → iPhone құрылғысын қайталау: `bridge:root=com.apple.MessagesBridgeSettings#MIRROR_MY_COMPANION_ID`
- Хабарлар → Арнаулы: `bridge:root=com.apple.MessagesBridgeSettings#CUSTOM_ID`
- Хабарлар → Әдепкі жауаптар: `bridge:root=com.apple.MessagesBridgeSettings&path=DEFAULT_REPLIES`
- Хабарлар → Әдепкі жауаптар → Әдепкі жауаптар: `bridge:root=com.apple.MessagesBridgeSettings&path=DEFAULT_REPLIES#Default%20Replies`
- Хабарлар → Әдепкі жауаптар → Смарт жауаптар: `bridge:root=com.apple.MessagesBridgeSettings&path=DEFAULT_REPLIES#Smart%20Replies`
- Хабарлар → Әдепкі жауаптар → Жауап қосу…: `bridge:root=com.apple.MessagesBridgeSettings&path=DEFAULT_REPLIES#Add%20reply%E2%80%A6`
- Хабарлар → Ескертулерді қайталау: `bridge:root=com.apple.MessagesBridgeSettings&path=PLAY_ALERT_TONE`
- Хабарлар → Аудио хабарлар: `bridge:root=com.apple.MessagesBridgeSettings&path=AudioMessagesMode`
- iPhone арқылы құлпын ашу | Білекті анықтау | Деректерді өшіру | Қарапайым құпиякод | Құпиякод | Құпиякодты қосу | Құпиякодты өзгерту | Құпиякодты өшіру: `bridge:root=PASSCODE_ID`
- iPhone арқылы құлпын ашу | Білекті анықтау | Деректерді өшіру | Қарапайым құпиякод | Құпиякод | Құпиякодты қосу | Құпиякодты өзгерту | Құпиякодты өшіру → Құпиякодты қосу: `bridge:root=PASSCODE_ID#TOGGLE_PASSCODE_ID`
- iPhone арқылы құлпын ашу | Білекті анықтау | Деректерді өшіру | Қарапайым құпиякод | Құпиякод | Құпиякодты қосу | Құпиякодты өзгерту | Құпиякодты өшіру → Құпиякодты өзгерту: `bridge:root=PASSCODE_ID#CHANGE_PASSCODE_ID`
- iPhone арқылы құлпын ашу | Білекті анықтау | Деректерді өшіру | Қарапайым құпиякод | Құпиякод | Құпиякодты қосу | Құпиякодты өзгерту | Құпиякодты өшіру → Қарапайым құпиякод: `bridge:root=PASSCODE_ID#SIMPLE_PASSCODE_SWITCH_ID`
- iPhone арқылы құлпын ашу | Білекті анықтау | Деректерді өшіру | Қарапайым құпиякод | Құпиякод | Құпиякодты қосу | Құпиякодты өзгерту | Құпиякодты өшіру → iPhone көмегімен құлпын ашу: `bridge:root=PASSCODE_ID#AUTO_UNLOCK_SWITCH_ID`
- iPhone арқылы құлпын ашу | Білекті анықтау | Деректерді өшіру | Қарапайым құпиякод | Құпиякод | Құпиякодты қосу | Құпиякодты өзгерту | Құпиякодты өшіру → Деректерді өшіру: `bridge:root=PASSCODE_ID#ERASE_DATA_SWITCH_ID`
- iPhone арқылы құлпын ашу | Білекті анықтау | Деректерді өшіру | Қарапайым құпиякод | Құпиякод | Құпиякодты қосу | Құпиякодты өзгерту | Құпиякодты өшіру → Білекті анықтау: `bridge:root=PASSCODE_ID#WRIST_DETECTION_CELL_ID`
- Пошта: `bridge:root=com.apple.NanoMailBridgeSettings`
- Пошта → iPhone құрылғысын қайталау: `bridge:root=com.apple.NanoMailBridgeSettings#MIRROR_MY_COMPANION_ID`
- Пошта → Арнаулы: `bridge:root=com.apple.NanoMailBridgeSettings#CUSTOM_ID`
- Пошта → Пошта реттеулері: `bridge:root=com.apple.NanoMailBridgeSettings#Mail%20Settings`
- Пошта → Аккаунттар: `bridge:root=com.apple.NanoMailBridgeSettings&path=Accounts`
- Пошта → Поштаны қосу: `bridge:root=com.apple.NanoMailBridgeSettings&path=Include%20Mail`
- Пошта → Хабар миниатюрасы: `bridge:root=com.apple.NanoMailBridgeSettings&path=Message%20Preview`
- Пошта → Хабар миниатюрасы → Жоқ: `bridge:root=com.apple.NanoMailBridgeSettings&path=Message%20Preview#0`
- Пошта → Хабар миниатюрасы → 1 жол: `bridge:root=com.apple.NanoMailBridgeSettings&path=Message%20Preview#1`
- Пошта → Хабар миниатюрасы → 2 жол: `bridge:root=com.apple.NanoMailBridgeSettings&path=Message%20Preview#2`
- Пошта → Әдепкі жауаптар: `bridge:root=com.apple.NanoMailBridgeSettings&path=Default%20Replies`
- Пошта → Әдепкі жауаптар → Әдепкі жауаптар: `bridge:root=com.apple.NanoMailBridgeSettings&path=Default%20Replies#Default%20Replies`
- Пошта → Әдепкі жауаптар → Жауап қосу…: `bridge:root=com.apple.NanoMailBridgeSettings&path=Default%20Replies#Add%20reply%E2%80%A6`
- Пошта → Қолтаңба: `bridge:root=com.apple.NanoMailBridgeSettings&path=Signature`
- Siri картасы үшін таңдалған акция | Акциялар | Ағымдағы баға | Нарық капиталы | Пайыздық өзгеріс | Пунктік өзгеріс: `bridge:root=com.apple.StocksBridgeSettings`
- Siri картасы үшін таңдалған акция | Акциялар | Ағымдағы баға | Нарық капиталы | Пайыздық өзгеріс | Пунктік өзгеріс → Циферблаттағы кеңейтімде мынаны көрсету:: `bridge:root=com.apple.StocksBridgeSettings#Clock%20Face%20Complication%20Shows`
- Siri картасы үшін таңдалған акция | Акциялар | Ағымдағы баға | Нарық капиталы | Пайыздық өзгеріс | Пунктік өзгеріс → Ағымдағы баға: `bridge:root=com.apple.StocksBridgeSettings#Current%20Price`
- Siri картасы үшін таңдалған акция | Акциялар | Ағымдағы баға | Нарық капиталы | Пайыздық өзгеріс | Пунктік өзгеріс → Пунктік өзгеріс: `bridge:root=com.apple.StocksBridgeSettings#Points%20Change`
- Siri картасы үшін таңдалған акция | Акциялар | Ағымдағы баға | Нарық капиталы | Пайыздық өзгеріс | Пунктік өзгеріс → Пайыздық өзгеріс: `bridge:root=com.apple.StocksBridgeSettings#Percentage%20Change`
- Siri картасы үшін таңдалған акция | Акциялар | Ағымдағы баға | Нарық капиталы | Пайыздық өзгеріс | Пунктік өзгеріс → Нарықтық капиталдандыру: `bridge:root=com.apple.StocksBridgeSettings#Market%20Cap`
- Siri картасы үшін таңдалған акция | Акциялар | Ағымдағы баға | Нарық капиталы | Пайыздық өзгеріс | Пунктік өзгеріс → Siri циферблатында мынаның баға белгіленімін көрсету:: `bridge:root=com.apple.StocksBridgeSettings#Siri%20Face%20Shows%20Quote%20For`
- Siri картасы үшін таңдалған акция | Акциялар | Ағымдағы баға | Нарық капиталы | Пайыздық өзгеріс | Пунктік өзгеріс → Таңдалған акция: `bridge:root=com.apple.StocksBridgeSettings&path=Selected%20Stock`
- Siri картасы үшін таңдалған акция | Акциялар | Ағымдағы баға | Нарық капиталы | Пайыздық өзгеріс | Пунктік өзгеріс → Таңдалған акция → Таңдалған акция: `bridge:root=com.apple.StocksBridgeSettings&path=Selected%20Stock#Selected%20Stock`
- Белсенділік: `bridge:root=com.apple.HealthAppsSettings`
- Белсенділік → Орындалу барысы туралы хабарлар: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL`
- Белсенділік → Орындалу барысы туралы хабарлар → Жоқ: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL#ZERO_HOURS_ID`
- Белсенділік → Орындалу барысы туралы хабарлар → 2 сағат сайын: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL#TWO_HOURS_ID`
- Белсенділік → Орындалу барысы туралы хабарлар → 4 сағат сайын: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL#FOUR_HOURS_ID`
- Белсенділік → Орындалу барысы туралы хабарлар → 6 сағат сайын: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL#SIX_HOURS_ID`
- Белсенділік → Орындалу барысы туралы хабарлар → 8 сағат сайын: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL#EIGHT_HOURS_ID`
- Белсенділік → Жетістіктер: `bridge:root=com.apple.HealthAppsSettings#ACHIEVEMENTS_ENABLED_LABEL`
- Белсенділік → Апталық жинақтама: `bridge:root=com.apple.HealthAppsSettings#WEEKLY_SUMMARY_ENABLED_LABEL`
- Белсенділік → Күнделікті жаттығулар: `bridge:root=com.apple.HealthAppsSettings#DAILY_PROGRESS_ENABLED_LABEL`
- Белсенділік → Орындалған мақсаттар: `bridge:root=com.apple.HealthAppsSettings#GOAL_COMPLETIONS_ENABLED_LABEL`
- Белсенділік → Арнайы жарыстар: `bridge:root=com.apple.HealthAppsSettings#REMOTE_ACHIEVEMENTS_ENABLED_LABEL`
- Белсенділік → Белсенділік деректерін бөлісуге қатысты хабарландырулар: `bridge:root=com.apple.HealthAppsSettings#ACTIVITY_SHARING_NOTIFICATIONS_ENABLED`
- Ауа райы: `bridge:root=com.apple.weatherbridgesettings`
- Ауа райы → Әдепкі қала: `bridge:root=com.apple.weatherbridgesettings&path=Default%20City`
- Ауа райы → Әдепкі қала → Әдепкі қала: `bridge:root=com.apple.weatherbridgesettings&path=Default%20City#Default%20City`
- Ауа райы → Әдепкі қала → Ағымдағы геолокация: `bridge:root=com.apple.weatherbridgesettings&path=Default%20City#Current%20Location`
- Контактілер: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired`
- Контактілер → Сұрыптау реті: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=contactsSortOrder`
- Контактілер → Сұрыптау реті → Аты, тегі: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=contactsSortOrder#0`
- Контактілер → Сұрыптау реті → Тегі, аты: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=contactsSortOrder#1`
- Контактілер → Дисплей реттілігі: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=NSPersonNameDefaultDisplayNameOrder`
- Контактілер → Дисплей реттілігі → Аты, тегі: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=NSPersonNameDefaultDisplayNameOrder#1`
- Контактілер → Дисплей реттілігі → Тегі, аты: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=NSPersonNameDefaultDisplayNameOrder#2`
- Контактілер → Қысқа ат: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName`
- Контактілер → Қысқа ат → Қысқа ат: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#Short%20Name`
- Контактілер → Қысқа ат → Аты және тегінің инициалы: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#First%20Name%20&%20Last%20Initial`
- Контактілер → Қысқа ат → Атының инициалы және тегі: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#First%20Initial%20&%20Last%20Name`
- Контактілер → Қысқа ат → Тек аты: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#First%20Name%20Only`
- Контактілер → Қысқа ат → Тек тегі: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#Last%20Name%20Only`
- Контактілер → Қысқа ат → Лақап аттар таңдау: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#Prefer%20Nicknames`
- Әмбебап қол жеткізу: `bridge:root=ACCESSIBILITY`
- Әмбебап қол жеткізу → Көру қабілеті: `bridge:root=ACCESSIBILITY#VISION`
- Әмбебап қол жеткізу → VoiceOver: `bridge:root=ACCESSIBILITY&path=VOICEOVER_TITLE`
- Әмбебап қол жеткізу → Масштабтау: `bridge:root=ACCESSIBILITY&path=ZOOM_TITLE`
- Әмбебап қол жеткізу → Қалың қаріпті мәтін: `bridge:root=ACCESSIBILITY#BoldTextEnabled`
- Әмбебап қол жеткізу → Қосу/өшіру белгілері: `bridge:root=ACCESSIBILITY#OnOffLabelsEnabled`
- Әмбебап қол жеткізу → Сұр түс реңктері: `bridge:root=ACCESSIBILITY#GrayscaleDisplay`
- Әмбебап қол жеткізу → Мөлдірлікті азайту: `bridge:root=ACCESSIBILITY#REDUCE_TRANSPARENCY`
- Әмбебап қол жеткізу → Қозғалысты азайту: `bridge:root=ACCESSIBILITY&path=ReduceMotion`
- Әмбебап қол жеткізу → Қоңырау үні: `bridge:root=ACCESSIBILITY&path=TapticChimesCell`
- Әмбебап қол жеткізу → Қоңырау үні → Қоңырау үні: `bridge:root=ACCESSIBILITY&path=TapticChimesCell#Chimes`
- Әмбебап қол жеткізу → Қоңырау үні → Кесте: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Schedule`
- Әмбебап қол жеткізу → Қоңырау үні → Кесте → Сағат сайын: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Schedule#Hourly`
- Әмбебап қол жеткізу → Қоңырау үні → Кесте → 30 минут: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Schedule#30%20minutes`
- Әмбебап қол жеткізу → Қоңырау үні → Кесте → 15 минут: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Schedule#15%20minutes`
- Әмбебап қол жеткізу → Қоңырау үні → Дыбыстар: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Sounds`
- Әмбебап қол жеткізу → Қоңырау үні → Дыбыстар → Қоңыраулар: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Sounds#Bells`
- Әмбебап қол жеткізу → Қоңырау үні → Дыбыстар → Құстар: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Sounds#Birds`
- Әмбебап қол жеткізу → Моторика: `bridge:root=ACCESSIBILITY#MotorGroupCell`
- Әмбебап қол жеткізу → Бүйірлік түймені басу жылдамдығы: `bridge:root=ACCESSIBILITY&path=SideButton`
- Әмбебап қол жеткізу → Бүйірлік түймені басу жылдамдығы → Басу жылдамдығы: `bridge:root=ACCESSIBILITY&path=SideButton#SIDE_SPEED_HEADER`
- Әмбебап қол жеткізу → Бүйірлік түймені басу жылдамдығы → Әдепкі бойынша: `bridge:root=ACCESSIBILITY&path=SideButton#SIDE_CLICK_SPEED_DEFAULT`
- Әмбебап қол жеткізу → Бүйірлік түймені басу жылдамдығы → Баяу: `bridge:root=ACCESSIBILITY&path=SideButton#SIDE_CLICK_SPEED_SLOW`
- Әмбебап қол жеткізу → Бүйірлік түймені басу жылдамдығы → Аса баяу: `bridge:root=ACCESSIBILITY&path=SideButton#SIDE_CLICK_SPEED_SLOWEST`
- Әмбебап қол жеткізу → Түрту әрекетін бейімдеу: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell`
- Әмбебап қол жеткізу → Түрту әрекетін бейімдеу → Түрту әрекетін бейімдеу: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#TOUCH_ACCOMMODATIONS_SWITCHER`
- Әмбебап қол жеткізу → Түрту әрекетін бейімдеу → Ұстап тұру ұзақтығы: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#HoldDurationGroup`
- Әмбебап қол жеткізу → Түрту әрекетін бейімдеу → Ұстап тұру ұзақтығы: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#HoldDuration`
- Әмбебап қол жеткізу → Түрту әрекетін бейімдеу → Қайталауды елемеу: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#IgnoreRepeatGroup`
- Әмбебап қол жеткізу → Түрту әрекетін бейімдеу → Қайталауды елемеу: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#IgnoreRepeat`
- Әмбебап қол жеткізу → Түрту әрекетін бейімдеу → Түрту бойынша көмек: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#Tap%20Assistance`
- Әмбебап қол жеткізу → Түрту әрекетін бейімдеу → Өшірулі: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#OFF`
- Әмбебап қол жеткізу → Түрту әрекетін бейімдеу → Бастапқы түрту орнын пайдалану: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#ACTIVATE_ON_TOUCH`
- Әмбебап қол жеткізу → Түрту әрекетін бейімдеу → Соңғы түрту орнын пайдалану: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#ACTIVATE_ON_RELEASE`
- Әмбебап қол жеткізу → МҮГЕДЕКТЕР АРБАСЫНДАҒЫ ҚОЗҒАЛЫС: `bridge:root=ACCESSIBILITY#MOBILITY`
- Әмбебап қол жеткізу → Рация: `bridge:root=ACCESSIBILITY#WalkieTalkieTapToTalkGroup`
- Әмбебап қол жеткізу → Сөйлесу үшін түртіңіз: `bridge:root=ACCESSIBILITY#WalkieTalkieTapToTalk`
- Әмбебап қол жеткізу → Есту: `bridge:root=ACCESSIBILITY#HEARING`
- Әмбебап қол жеткізу → RTT: `bridge:root=ACCESSIBILITY&path=RTT`
- Әмбебап қол жеткізу → RTT → RTT: `bridge:root=ACCESSIBILITY&path=RTT#RTT_TITLE`
- Әмбебап қол жеткізу → RTT → Ретрансляция нөмірі: `bridge:root=ACCESSIBILITY&path=RTT/TTY_RELAY_LABEL`
- Әмбебап қол жеткізу → RTT → Дереу жіберу: `bridge:root=ACCESSIBILITY&path=RTT#TTY_REALTIME_LABEL`
- Әмбебап қол жеткізу → RTT → Әдепкі жауаптар: `bridge:root=ACCESSIBILITY&path=RTT/RTT_CANNED_TEXT_TITLE`
- Әмбебап қол жеткізу → RTT → Әдепкі жауаптар → Әдепкі жауаптар: `bridge:root=ACCESSIBILITY&path=RTT/RTT_CANNED_TEXT_TITLE#Default%20Replies`
- Әмбебап қол жеткізу → RTT → Әдепкі жауаптар → Жауап қосу…: `bridge:root=ACCESSIBILITY&path=RTT/RTT_CANNED_TEXT_TITLE#Add%20reply%E2%80%A6`
- Әмбебап қол жеткізу → Моно-аудио: `bridge:root=ACCESSIBILITY#MonoAudioEnabled`
- Әмбебап қол жеткізу → Оң/cол жақ стереоарналар теңгерімі: `bridge:root=ACCESSIBILITY#LEFT_RIGHT_BALANCE_SPOKEN`
- Әмбебап қол жеткізу → Құлаққап хабарландырулары: `bridge:root=ACCESSIBILITY#HeadphoneNotificationsID`
- Әмбебап қол жеткізу → Есту құрылғылары: `bridge:root=ACCESSIBILITY#HearingDevicesComplicationGroupID`
- Әмбебап қол жеткізу → Кеңейтім: `bridge:root=ACCESSIBILITY&path=HearingDevicesComplicationRowID`
- Әмбебап қол жеткізу → Кеңейтім → Микрофонның дыбыс деңгейі: `bridge:root=ACCESSIBILITY&path=HearingDevicesComplicationRowID#Mic%20Volume`
- Әмбебап қол жеткізу → Кеңейтім → Бағдарлама: `bridge:root=ACCESSIBILITY&path=HearingDevicesComplicationRowID#Program`
- Әмбебап қол жеткізу → Тактильді уақыт жылдамдығы: `bridge:root=ACCESSIBILITY#TapticTimeSpeedAdjustmentGroup`
- Әмбебап қол жеткізу → Әмбебап қол жеткізу пәрмені: `bridge:root=ACCESSIBILITY&path=AX_SHORTCUT`
- Бұрылыстар туралы ескерту | Карталар: `bridge:root=com.apple.NanoMapsBridgeSettings`
- Бұрылыстар туралы ескерту | Карталар → Бұрылыстар туралы ескерту: `bridge:root=com.apple.NanoMapsBridgeSettings#Turn%20Alerts`
- Бұрылыстар туралы ескерту | Карталар → Көлік жүргізу: `bridge:root=com.apple.NanoMapsBridgeSettings#Driving`
- Бұрылыстар туралы ескерту | Карталар → CarPlay арқылы жүргізу: `bridge:root=com.apple.NanoMapsBridgeSettings#Driving%20with%20CarPlay`
- Бұрылыстар туралы ескерту | Карталар → Жаяу жүру: `bridge:root=com.apple.NanoMapsBridgeSettings#Walking`
- Бұрылыстар туралы ескерту | Карталар → Велосипед тебу: `bridge:root=com.apple.NanoMapsBridgeSettings#Cycling`
- Бұрылыстар туралы ескерту | Карталар → Навигацияны көрсету: `bridge:root=com.apple.NanoMapsBridgeSettings#Show%20Navigation`
- Бұрылыстар туралы ескерту | Карталар → Қоғамдық көлік: `bridge:root=com.apple.NanoMapsBridgeSettings#Transit`
- Бұрылыстар туралы ескерту | Карталар → Құрастыру жинағы туралы ақпарат:: `bridge:root=com.apple.NanoMapsBridgeSettings#Build%20Info%3A`
- Пошта және күнтізбе: `bridge:root=com.apple.BridgeRemoteAccounts`
- Пошта және күнтізбе → Аккаунттар: `bridge:root=com.apple.BridgeRemoteAccounts#Accounts`
- Пошта және күнтізбе → Google аккаунтын қосу...: `bridge:root=com.apple.BridgeRemoteAccounts#ADD_GOOGLE_ACCOUNT`
- Пошта және күнтізбе → Алу: `bridge:root=com.apple.BridgeRemoteAccounts&path=Fetch`
- Пошта және күнтізбе → Алу → Өшірулі: `bridge:root=com.apple.BridgeRemoteAccounts&path=Fetch#Off`
- Пошта және күнтізбе → Алу → Сағат сайын: `bridge:root=com.apple.BridgeRemoteAccounts&path=Fetch#Hourly`
- Пошта және күнтізбе → Алу → 30 мин: `bridge:root=com.apple.BridgeRemoteAccounts&path=Fetch#30%20min`
- Пошта және күнтізбе → Алу → 15 мин: `bridge:root=com.apple.BridgeRemoteAccounts&path=Fetch#15%20min`
- Жүрек: `bridge:root=com.apple.HeartRateSettings`
- Жүрек → Жүрек: `bridge:root=com.apple.HeartRateSettings#1`
- Жүрек → Жүрек соғу жиілігі туралы хабарландырулар: `bridge:root=com.apple.HeartRateSettings#2`
- Жүрек → Жоғары жүрек соғу жиілігі: `bridge:root=com.apple.HeartRateSettings#3`
- Жүрек → Төмен жүрек соғу жиілігі: `bridge:root=com.apple.HeartRateSettings#4`
- Жүрек → Тұрақсыз ырғақ: `bridge:root=com.apple.HeartRateSettings#5`
- Жүрек → Жазылған ЭКГ-ны «Денсаулық» қолданбасында көру: `bridge:root=com.apple.HeartRateSettings#6`
- Жүрек → ЭКГ: `bridge:root=com.apple.HeartRateSettings#7`
- App Store: `bridge:root=com.apple.BridgeAppStoreDaemonSettings`
- App Store → Авто жүктеп алулар: `bridge:root=com.apple.BridgeAppStoreDaemonSettings#automaticDownloadSpecifier`
- App Store → Автоматты жаңартулар: `bridge:root=com.apple.BridgeAppStoreDaemonSettings#Automatic%20Updates`
- Ұйқы: `bridge:root=com.apple.NanoBedtimeBridgeSettings`
- Ұйқы → «Денсаулық» қолданбасында «Ұйқы» функциясын баптау: `bridge:root=com.apple.NanoBedtimeBridgeSettings#SET_UP_SLEEP_CELL_ID`
- Музыка | Сақтау шегі | Синхрондалған музыка: `bridge:root=com.apple.NanoMusicBridgeSettings`
- Музыка | Сақтау шегі | Синхрондалған музыка → ПЛЕЙЛИСТТЕР ЖӘНЕ АЛЬБОМДАР: `bridge:root=com.apple.NanoMusicBridgeSettings#PLAYLISTS%20&%20ALBUMS`
- Музыка | Сақтау шегі | Синхрондалған музыка → Музыка қосу…: `bridge:root=com.apple.NanoMusicBridgeSettings#Add%20Music%E2%80%A6`
- Wallet және Apple Pay: `bridge:root=com.apple.NanoPassbookBridgeSettings`
- Wallet және Apple Pay → Apple Cash: `bridge:root=com.apple.NanoPassbookBridgeSettings#Apple%C2%A0Cash`
- Wallet және Apple Pay → Картаны қосу: `bridge:root=com.apple.NanoPassbookBridgeSettings#Add%20Card`
- Wallet және Apple Pay → Хабарландырулар: `bridge:root=com.apple.NanoPassbookBridgeSettings#MIRROR_RADIO_GROUP_ID`
- Wallet және Apple Pay → iPhone құрылғысын қайталау: `bridge:root=com.apple.NanoPassbookBridgeSettings#MIRROR_MY_COMPANION_ID`
- Wallet және Apple Pay → Арнаулы: `bridge:root=com.apple.NanoPassbookBridgeSettings#CUSTOM_ID`
- Денсаулық: `bridge:root=com.apple.BridgeHealthSettings`
- Apple Watch сағатымды табу: `bridge:root=ActiveWatch`
- Apple Watch сағатымды табу → Жаңа сағатты жұптастыру: `bridge:root=ActiveWatch&path=Pair%20New%20Watch`
- Зерделілік: `bridge:root=com.apple.MindSettings`
- Зерделілік → Хабарландыруды қосу: `bridge:root=com.apple.MindSettings#ALLOW_NOTIFICATIONS_ID`
- Зерделілік → Хабарландыру орталығына жіберу: `bridge:root=com.apple.MindSettings#SEND_TO_NOTIFICATION_CENTER_ID`
- Зерделілік → Хабарландыруды өшіру: `bridge:root=com.apple.MindSettings#NOTIFICATIONS_OFF_ID`
- Зерделілік → Зерделілік сеансы туралы еске салғыштар: `bridge:root=com.apple.MindSettings#MIND_GROUP_ID`
- Зерделілік → Күн басы: `bridge:root=com.apple.MindSettings#MIND_START_OF_DAY_REMINDER`
- Зерделілік → Күн соңы: `bridge:root=com.apple.MindSettings#MIND_END_OF_DAY_REMINDER`
- Зерделілік → Еске салғыш қосу…: `bridge:root=com.apple.MindSettings#Add%20Reminder%E2%80%A6`
- Зерделілік → Апталық жинақтама: `bridge:root=com.apple.MindSettings#MIND_WEEKLY_SUMMARY_ID`
- Зерделілік → Дыбысын бүгінге өшіру: `bridge:root=com.apple.MindSettings#MIND_MUTE_FOR_TODAY_ID`
- Зерделілік → Тыныс алу жиілігі: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID`
- Зерделілік → Тыныс алу жиілігі → Минутына 4 рет тыныс алу: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_4`
- Зерделілік → Тыныс алу жиілігі → Минутына 5 рет тыныс алу: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_5`
- Зерделілік → Тыныс алу жиілігі → Минутына 6 рет тыныс алу: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_6`
- Зерделілік → Тыныс алу жиілігі → Минутына 7 рет тыныс алу: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_7`
- Зерделілік → Тыныс алу жиілігі → Минутына 8 рет тыныс алу: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_8`
- Зерделілік → Тыныс алу жиілігі → Минутына 9 рет тыныс алу: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_9`
- Зерделілік → Тыныс алу жиілігі → Минутына 10 рет тыныс алу: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_10`
- Зерделілік → Жанасу сигналдары: `bridge:root=com.apple.MindSettings&path=MIND_HAPTICS_ID`
- Зерделілік → Жанасу сигналдары → Жоқ: `bridge:root=com.apple.MindSettings&path=MIND_HAPTICS_ID#NONE_ID`
- Зерделілік → Жанасу сигналдары → Минималды: `bridge:root=com.apple.MindSettings&path=MIND_HAPTICS_ID#MINIMAL_ID`
- Зерделілік → Жанасу сигналдары → Сезілетін: `bridge:root=com.apple.MindSettings&path=MIND_HAPTICS_ID#PROMINENT_ID`
- Подкасттар: `bridge:root=com.apple.private.PodcastsBridgeSettings`
- Телефон: `bridge:root=com.apple.PhoneBridgeSettings`
- Телефон → Қоңыраулар: `bridge:root=com.apple.PhoneBridgeSettings#carrier_direct_calling_group_id`
- Телефон → Рингтон: `bridge:root=com.apple.PhoneBridgeSettings#RINGTONE`
- Телефон → Дыбыс: `bridge:root=com.apple.PhoneBridgeSettings#INCOMING_CALL_SOUND`
- Телефон → Жанасу сигналы: `bridge:root=com.apple.PhoneBridgeSettings#INCOMING_CALL_HAPTIC`
- Тереңдік: `bridge:root=com.apple.DepthCompanionSettings`
- Әрекет түймесі: `bridge:root=STING_TITLE`
- Ұялы байланыс операторының реттеулері: `bridge:root=CARRIER_SETTINGS`
- Ұялы байланыс: `bridge:root=CELLULAR_ID`
- Dock: `bridge:root=DOCK`
- Dock → Dock панелінде орналасуы: `bridge:root=DOCK#OrderingOptionGroup`
- Dock → Соңғылар: `bridge:root=DOCK#Recents`
- Dock → Таңдаулылар: `bridge:root=DOCK#Favorites`
- Dock: `bridge:root=DOCK.0`
- Dock → Dock панелінде орналасуы: `bridge:root=DOCK.0#OrderingOptionGroup`
- Dock → Соңғылар: `bridge:root=DOCK.0#Recents`
- Dock → Таңдаулылар: `bridge:root=DOCK.0#Favorites`
- Аудиокітаптар: `bridge:root=com.apple.NanoBooks.BridgeSettings`
- Аудиокітаптар → Жүйеге кіру: `bridge:root=com.apple.NanoBooks.BridgeSettings#Sign%20In`
- Макс. фотолар саны | Таңдалған фотоальбом: `bridge:root=com.apple.mobileslideshow`
- Оқылғаны туралы есептерді жіберу: `bridge:root=com.apple.MessagesBridgeSettings%23READ_RECEIPTS`